--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/v5-patch-for-react-19": "^1.0.3",
+    "@hookform/resolvers": "^5.2.2",
     "@stitches/react": "^1.2.8",
     "@tanstack/react-query": "^5.90.2",
     "antd": "^5.27.4",
+    "dayjs": "^1.11.18",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "recharts": "^3.2.1"
+    "react-hook-form": "^7.63.0",
+    "react-spinners": "^0.17.0",
+    "recharts": "^3.2.1",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
